# blue-heart-dataset-scripts

./: .gitignore  1_feature_maps.ipynb  2_catchment_stats.ipynb  3_gauge_raw_data_completeness.ipynb  4_gauge_raw_data_quality_checks.ipynb  5_gauge_raw_data_quality_analysis.ipynb  6_timeseries_plots.ipynb  README.md  blue_heart_data_handling.py  pyproject.toml
