[project]
name = "blue-heart-dataset"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "geopandas>=0.14",
    "matplotlib>=3.8",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "contextily>=1.6",
    "scipy>=1.13",
    "plotly>=6.5",
    "kaleido>=1.3",
    "pingouin>0.6"
]